<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jzz.treasureship.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_search"
            app:destination="@id/navigation_home_search" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_checkGoods"
            app:destination="@id/navigation_checkGoods" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_search"
        android:name="com.jzz.treasureship.ui.search.SearchFragment"
        android:label="@string/title_home_search"
        tools:layout="@layout/home_search">
        <action
            android:id="@+id/action_navigation_home_search_to_navigation_home_search_result"
            app:destination="@id/navigation_home_search_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_search_result"
        android:name="com.jzz.treasureship.ui.search.SearchResultsFragment"
        android:label="@string/title_home_search_result"
        tools:layout="@layout/fragment_search_results">
        <action
            android:id="@+id/action_navigation_home_search_result_to_navigation_checkGoods"
            app:destination="@id/navigation_checkGoods" />
    </fragment>

    <fragment
        android:id="@+id/navigation_checkGoods"
        android:name="com.jzz.treasureship.ui.goods.GoodsDetailFragment"
        android:label="@string/title_check_goods"
        tools:layout="@layout/fragment_goods_details">
        <action
            android:id="@+id/action_navigation_checkGoods_to_navigation_paypal"
            app:destination="@id/navigation_paypal" />
        <action
            android:id="@+id/action_navigation_checkGoods_to_navigation_shop_car"
            app:destination="@id/navigation_shop_car" />
    </fragment>

    <fragment
        android:id="@+id/navigation_treasure_box"
        android:name="com.jzz.treasureship.ui.treasurebox.TreasureBoxFragment"
        android:label="@string/title_treasure_box"
        tools:layout="@layout/fragment_treasure_box">
        <action
            android:id="@+id/action_navigation_treasure_box_to_navigation_shop_car"
            app:destination="@id/navigation_shop_car" />
        <action
            android:id="@+id/action_navigation_treasure_box_to_navigation_checkGoods"
            app:destination="@id/navigation_checkGoods" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shop_car"
        android:name="com.jzz.treasureship.ui.shopcar.ShopCarFragment"
        android:label="@string/title_shop_car"
        tools:layout="@layout/shop_car_fragment">
        <action
            android:id="@+id/action_navigation_shop_car_to_navigation_paypal"
            app:destination="@id/navigation_paypal" />
    </fragment>

    <fragment
        android:id="@+id/navigation_paypal"
        android:name="com.jzz.treasureship.ui.paypal.PaypalFragment"
        android:label="@string/title_paypal"
        tools:layout="@layout/fragment_paypal">
        <action
            android:id="@+id/action_navigation_paypal_to_navigation_add_address"
            app:destination="@id/navigation_add_address" />
        <action
            android:id="@+id/action_navigation_paypal_to_navigation_set_address"
            app:destination="@id/navigation_set_address" />
        <action
            android:id="@+id/action_navigation_paypal_to_navigation_ask_someone_pay"
            app:destination="@id/navigation_ask_someone_pay" />
    </fragment>

    <fragment
        android:id="@+id/navigation_address_book"
        android:name="com.jzz.treasureship.ui.addressbook.AddressBookFragment"
        android:label="@string/title_address_book"
        tools:layout="@layout/fragment_address_book">
        <action
            android:id="@+id/action_navigation_address_book_to_navigation_customer_detail"
            app:destination="@id/navigation_customer_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_settings"
        android:name="com.jzz.treasureship.ui.usersetting.UserSettingFragment"
        android:label="@string/title_user_setting"
        tools:layout="@layout/fragment_user_setting">
        <action
            android:id="@+id/action_navigation_user_settings_to_navigation_shop_car"
            app:destination="@id/navigation_shop_car" />
        <action
            android:id="@+id/action_navigation_user_settings_to_navigation_mine_setting"
            app:destination="@id/navigation_mine_setting" />
        <action
            android:id="@+id/action_navigation_user_settings_to_navigation_orders"
            app:destination="@id/navigation_orders" />
        <action
            android:id="@+id/action_navigation_user_settings_to_navigation_mine_wallet"
            app:destination="@id/navigation_mine_wallet" />
        <action
            android:id="@+id/action_navigation_user_settings_to_navigation_mine_invite"
            app:destination="@id/navigation_mine_invite" />
        <action
            android:id="@+id/action_navigation_user_settings_to_navigation_mine_rank"
            app:destination="@id/navigation_mine_rank" />
        <action
            android:id="@+id/action_navigation_user_settings_to_navigation_mine_userinfo"
            app:destination="@id/navigation_mine_userinfo" />
        <action
            android:id="@+id/action_navigation_user_settings_to_navigation_mine_msg_center"
            app:destination="@id/navigation_mine_msg_center" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_address"
        android:name="com.jzz.treasureship.ui.address.AddAddressFragment"
        android:label="@string/title_add_address"
        tools:layout="@layout/fragment_add_address" />

    <fragment
        android:id="@+id/navigation_mine_setting"
        android:name="com.jzz.treasureship.ui.setting.SettingFragment"
        android:label="@string/title_mine_setting"
        tools:layout="@layout/fragment_mine_setting">
        <action
            android:id="@+id/action_navigation_mine_setting_to_navigation_aboutUs"
            app:destination="@id/navigation_aboutUs" />
        <action
            android:id="@+id/action_navigation_mine_setting_to_navigation_feedback"
            app:destination="@id/navigation_feedback" />
    </fragment>

    <fragment
        android:id="@+id/navigation_set_address"
        android:name="com.jzz.treasureship.ui.address.ChooseAddressFragment"
        android:label="@string/title_set_address"
        tools:layout="@layout/fragment_set_address">
        <action
            android:id="@+id/action_navigation_set_address_to_navigation_add_address"
            app:destination="@+id/navigation_add_address" />
    </fragment>

    <fragment
        android:id="@+id/navigation_treasurebox_tab"
        android:name="com.jzz.treasureship.ui.treasurebox.TsbVpFragment"
        android:label="@string/title_treasurebox_tab"
        tools:layout="@layout/fragment_tsb_vp" />

    <fragment
        android:id="@+id/navigation_aboutUs"
        android:name="com.jzz.treasureship.ui.setting.AboutUsFragment"
        android:label="@string/title_about_us"
        tools:layout="@layout/fragment_about_us" >
        <action
            android:id="@+id/action_navigation_aboutUs_to_navigation_mine_setting"
            app:destination="@id/navigation_mine_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_feedback"
        android:name="com.jzz.treasureship.ui.setting.FeedbackFragment"
        android:label="@string/title_feedback"
        tools:layout="@layout/fragment_feedback" >
        <action
            android:id="@+id/action_navigation_feedback_to_navigation_mine_setting"
            app:destination="@id/navigation_mine_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.jzz.treasureship.ui.orders.OrdersFragment"
        android:label="@string/title_mine_orders"
        tools:layout="@layout/fragment_mine_orders">
        <action
            android:id="@+id/action_navigation_orders_to_navigation_user_settings"
            app:destination="@id/navigation_user_settings" />
        <action
            android:id="@+id/action_navigation_orders_to_navigation_order_trace"
            app:destination="@id/navigation_order_trace" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ask_someone_pay"
        android:name="com.jzz.treasureship.ui.otherspay.OthersPayFragment"
        android:label="@string/title_someone_pay"
        tools:layout="@layout/fragment_others_pay">
        <action
            android:id="@+id/action_navigation_ask_someone_pay_to_navigation_add_doctor_advices"
            app:destination="@id/navigation_add_doctor_advices" />
        <action
            android:id="@+id/action_navigation_ask_someone_pay_to_navigation_orders"
            app:destination="@id/navigation_orders" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_doctor_advices"
        android:name="com.jzz.treasureship.ui.doctordevice.AddDoctorAdvicesFragment"
        android:label="@string/title_add_advices"
        tools:layout="@layout/fragment_doctor_advices">
        <action
            android:id="@+id/action_navigation_add_doctor_advices_to_navigation_orders"
            app:destination="@id/navigation_orders" />
    </fragment>

    <fragment
        android:id="@+id/navigation_customer_detail"
        android:name="com.jzz.treasureship.ui.customer.CustomerDetailFragment"
        android:label="@string/title_customer_detail"
        tools:layout="@layout/layout_customer_detail" />

    <fragment
        android:id="@+id/navigation_order_trace"
        android:name="com.jzz.treasureship.ui.trace.TraceFragment"
        android:label="@string/title_order_trace"
        tools:layout="@layout/layout_view_logistics">
        <action
            android:id="@+id/action_navigation_order_trace_to_navigation_orders"
            app:destination="@id/navigation_orders" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mine_wallet"
        android:name="com.jzz.treasureship.ui.wallet.WalletFragment"
        android:label="@string/title_mine_wallet"
        tools:layout="@layout/fragment_mine_wallet">
        <action
            android:id="@+id/action_navigation_mine_wallet_to_navigation_mine_withdraw"
            app:destination="@id/navigation_mine_withdraw" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mine_withdraw"
        android:name="com.jzz.treasureship.ui.withdraw.WithdrawFragment"
        android:label="@string/title_mine_withdraw"
        tools:layout="@layout/fragment_with_draw" />

    <fragment
        android:id="@+id/navigation_mine_invite"
        android:name="com.jzz.treasureship.ui.invite.InviteFragment"
        android:label="@string/title_mine_invite"
        tools:layout="@layout/fragment_mine_invite">
        <action
            android:id="@+id/action_navigation_mine_invite_to_navigation_mine_invite_detail"
            app:destination="@id/navigation_mine_invite_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mine_invite_detail"
        android:name="com.jzz.treasureship.ui.invite.InviteDetailsFragment"
        android:label="@string/title_mine_invite_detail"
        tools:layout="@layout/fragment_invited_detail" />

    <fragment
        android:id="@+id/navigation_mine_rank"
        android:name="com.jzz.treasureship.ui.ranking.RankingFragment"
        android:label="@string/title_mine_ranking"
        tools:layout="@layout/layout_mine_rank" />

    <fragment
        android:id="@+id/navigation_mine_userinfo"
        android:name="com.jzz.treasureship.ui.user.UserInfoFragment"
        android:label="@string/title_mine_userinfo"
        tools:layout="@layout/fragment_userinfo">
        <action
            android:id="@+id/action_navigation_mine_userinfo_to_navigation_set_address"
            app:destination="@id/navigation_set_address" />
        <action
            android:id="@+id/action_navigation_mine_userinfo_to_navigation_mine_modified_name"
            app:destination="@id/navigation_mine_modified_name" />
        <action
            android:id="@+id/action_navigation_mine_userinfo_to_navigation_mine_authentication"
            app:destination="@id/navigation_mine_authentication" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mine_modified_name"
        android:name="com.jzz.treasureship.ui.user.ModifyNickNameFragment"
        android:label="@string/title_mine_modify_name"
        tools:layout="@layout/fragment_modified_nickname" />

    <fragment
        android:id="@+id/navigation_mine_authentication"
        android:name="com.jzz.treasureship.ui.user.AuthenticationFragment"
        android:label="@string/title_mine_authentication"
        tools:layout="@layout/fragment_mine_authentication" />

    <fragment
        android:id="@+id/navigation_mine_msg_center"
        android:name="com.jzz.treasureship.ui.msg.MsgFragment"
        android:label="@string/title_mine_msg_center"
        tools:layout="@layout/fragment_msg_center" />
</navigation>